--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,7 @@
 
   <h2>Opis</h2>
   <p>Kratek opis projekta (kaj rešuje, za koga, kaj so glavne funkcije).</p>
+  <p>Test vaja 4</p>
  
 </body>
 </html>
